Add tox venv handling

--- a/.gitignore
+++ b/.gitignore
@@ -160,6 +160,8 @@ GitHub.sublime-settings
 pyvenv.cfg
 pip-selfcheck.json
 
-
-junit.xml
 # End of https://www.gitignore.io/api/linux,python,virtualenv,sublimetext
+
+*.xml
+tools/ssh_config
+flake8_results.html
