--- a/tox.ini
+++ b/tox.ini
@@ -14,22 +14,22 @@ envdir={toxworkdir}/kubic-testinfra
 [testenv:admin]
 commands = 
     {[testenv]commands}
-    pytest --ssh-config={env:SSH_CONFIG:{toxinidir}/tools/ssh_config} --sudo -m "admin or common" {posargs} --junit-xml admin.xml -v
+    pytest --ssh-config={env:SSH_CONFIG:{toxinidir}/tools/ssh_config} --sudo -m "admin or common" -v {posargs}
 
 [testenv:master]
 commands = 
     {[testenv]commands}
-    pytest --ssh-config={env:SSH_CONFIG:{toxinidir}/tools/ssh_config} --sudo -m "master or common" {posargs} --junit-xml master.xml -v
+    pytest --ssh-config={env:SSH_CONFIG:{toxinidir}/tools/ssh_config} --sudo -m "master or common" -v {posargs}
 
 [testenv:worker]
 commands = 
     {[testenv]commands}
-    pytest --ssh-config={env:SSH_CONFIG:{toxinidir}/tools/ssh_config} --sudo -m "worker or common" {posargs} --junit-xml worker.xml -v
+    pytest --ssh-config={env:SSH_CONFIG:{toxinidir}/tools/ssh_config} --sudo -m "worker or common" -v {posargs}
 
 [testenv:all]
 commands = 
     {[testenv]commands}
-    sh {toxinidir}/tools/testAllRoles.sh {env:ENVIRONMENT_JSON:{toxinidir}/tools/environment.json} {env:SSH_CONFIG:{toxinidir}/tools/ssh_config} {posargs}
+    sh {toxinidir}/tools/testAllRoles.sh {env:ENVIRONMENT_JSON:{toxinidir}/../terraform/environment.json} {env:SSH_CONFIG:{toxinidir}/tools/ssh_config} {posargs}
 
 [testenv:linters]
 deps = -r{toxinidir}/test-requirements.txt
