remove {envname} for old tox

--- a/tox.ini
+++ b/tox.ini
@@ -34,7 +34,7 @@ commands =
 [testenv:linters]
 deps = -r{toxinidir}/test-requirements.txt
 commands = sh tools/pretty_flake8.sh
-envdir={toxworkdir}/{envname}
+envdir={toxworkdir}/linters
 
 [flake8]
 ignore = D203
